# Ex3---Advanced-Programming

./: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Cell.h  GameUtilities.cpp  GameUtilities.h  MovesEvaluator.cpp  MovesEvaluator.h  Participant.cpp  Participant.h  Player.cpp  Player.h  ReversiGame.cpp  ReversiGame.h  TurnsManager.cpp  TurnsManager.h  alonlog.txt  main.cpp  makefile
Tests/: TestAI.cpp  TestBoard.cpp  TestGameUtilities.cpp  TestMovesEvaluator.cpp  TestParticipant.cpp  TestTurnsManager.cpp  tests_main.cpp
src/: main.cpp
src/core/: README.md
src/core/Board/: Board.cpp  Board.h  Cell.h
src/core/GameFlow/: ReversiGame.cpp  ReversiGame.h
src/core/GameLogic/: MovesEvaluator.cpp  MovesEvaluator.h  TurnsManager.cpp  TurnsManager.h
src/core/Players/: AI.cpp  AI.h  Participant.cpp  Participant.h  Player.cpp  Player.h
src/core/Utilities/: GameUtilities.cpp  GameUtilities.h
